<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <ImageView
        android:id="@+id/image_hotel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/loading_hotel"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:numStars="5"
            style="?android:attr/ratingBarStyleSmall"

            />

        <TextView
            android:id="@+id/payment_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotle_payment"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/top_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_hotel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotel_name"
                android:layout_alignParentLeft="true"
                android:layout_toRightOf="@+id/avgRating_hotel_textView"
                android:layout_marginRight="10dp"
                android:lines="1"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/avgRating_hotel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_amount"
                android:layout_alignParentRight="true"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_footer"
            android:layout_marginTop="5dp">
            <TextView
                android:id="@+id/distance_hotel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:id="@+id/avgStatement_hotel_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_per_night"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>