<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hamad.ali.hotelslist.MainActivity">

    <ImageView
        android:id="@+id/loading_temp_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/yamsafer_loading"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:id="@+id/tabs_view"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_hotels"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pay_now_hotels"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pay_later_hotels"
            android:gravity="center"/>
    </LinearLayout>

    <ListView
        android:id="@+id/hotels_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs_view"
        android:layout_marginTop="15dp">

    </ListView>
</RelativeLayout>
